--- a/frontend/test_smooth.html
+++ b/frontend/test_smooth.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camera with EMA</title>
+  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.21.0-dev.20241028-dd28f09ce2/dist/ort.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="/frontend/js/check_pushup.js"></script>
   <style>
     video, canvas {
@@ -27,7 +29,7 @@
       locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`,
     });
     pose.setOptions({
-      modelComplexity: 1,
+      modelComplexity: 2,
       smoothLandmarks: false, // Không dùng smoothing tích hợp, tự làm mượt với EMA
       enableSegmentation: false,
       minDetectionConfidence: 0.5,
@@ -36,7 +38,7 @@
 
     const videoElement = document.getElementById('camera');
     const canvasElement = document.getElementById('output');
-    const canvasCtx = canvasElement.getContext('2d');
+    const canvasCtx = canvasElement.getContext('2d', { willReadFrequently: true });
 
     // Camera setup
     const camera = new Camera(videoElement, {
@@ -49,8 +51,10 @@
     camera.start();
 
     // Hệ số làm mượt EMA
-    const ALPHA = 0.3;
+    const ALPHA = 0.5;
     let emaLandmarks = null;
+    let lm_11, lm_12, lm_13, lm_14, lm_15, lm_16, lm_23, lm_24, lm_25, lm_26, lm_27, lm_28;
+    let shoulder, elbow, wrist, hip, knee, ankle;
 
     // Hàm áp dụng EMA
     function applyEma(currentLandmarks, emaLandmarks, alpha) {
@@ -66,13 +70,44 @@
       }));
     }
 
+    function calculate_angle(a, b, c) {
+      const x1 = a.x, y1 = a.y, z1 = a.z;
+      const x2 = b.x, y2 = b.y, z2 = b.z;
+      const x3 = c.x, y3 = c.y, z3 = c.z;
+
+      // Vectors BA and BC
+      const BA = [x1 - x2, y1 - y2, z1 - z2];
+      const BC = [x3 - x2, y3 - y2, z3 - z2];
+
+      // Dot product
+      const dotProduct = BA[0] * BC[0] + BA[1] * BC[1] + BA[2] * BC[2];
+
+      // Magnitudes
+      const magnitudeBA = Math.sqrt(BA[0] ** 2 + BA[1] ** 2 + BA[2] ** 2);
+      const magnitudeBC = Math.sqrt(BC[0] ** 2 + BC[1] ** 2 + BC[2] ** 2);
+
+      // Cosine of the angle
+      let cosTheta = dotProduct / (magnitudeBA * magnitudeBC);
+
+      // Clamp cosTheta to the valid range [-1, 1] to avoid math domain errors
+      cosTheta = Math.max(-1.0, Math.min(1.0, cosTheta));
+
+      // Angle in radians
+      const angleRad = Math.acos(cosTheta);
+
+      // Convert to degrees (optional)
+      const angleDeg = angleRad * (180 / Math.PI);
+
+      return Math.round(angleDeg);
+  }
+
     // Lắng nghe sự kiện landmarks từ MediaPipe
     pose.onResults((results) => {
       if (results.poseLandmarks) {
         // Áp dụng EMA
         emaLandmarks = applyEma(results.poseLandmarks, emaLandmarks, ALPHA);
 
-        const specificLandmarks = [11, 12, 13, 14, 15, 16].map(index => emaLandmarks[index]);
+        const specificLandmarks = [11, 12, 13, 14, 15, 16, 23, 24, 25, 26, 27, 28].map(index => emaLandmarks[index]);
 
         const dpr = window.devicePixelRatio || 1
 
@@ -83,9 +118,68 @@
         canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
         canvasCtx.drawImage(results.image, 0, 0, canvasElement.width, canvasElement.height);
 
-        // console.log(check_pushup(results.image, emaLandmarks));
+        const image = canvasCtx.getImageData(0, 0, canvasElement.width, canvasElement.height);
 
-        console.log("EMA: ",specificLandmarks[0]);
+        lm_11 = specificLandmarks[0];
+        lm_12 = specificLandmarks[1]; 
+        lm_13 = specificLandmarks[2];
+        lm_14 = specificLandmarks[3]; 
+        lm_15 = specificLandmarks[4];
+        lm_16 = specificLandmarks[5];  
+        lm_23 = specificLandmarks[6];
+        lm_24 = specificLandmarks[7]; 
+        lm_25 = specificLandmarks[8];
+        lm_26 = specificLandmarks[9]; 
+        lm_27 = specificLandmarks[10];
+        lm_28 = specificLandmarks[11]; 
+
+        if (lm_11.visibility> lm_12.visibility && lm_11.visibility> 0.8){
+            shoulder = lm_11;
+            elbow = lm_13;
+            wrist = lm_15;
+            hip = lm_23;
+            knee = lm_25;
+            ankle = lm_27;
+        }
+        else if (lm_12.visibility> lm_11.visibility && lm_12.visibility> 0.8){
+            shoulder = lm_12;
+            elbow = lm_14;
+            wrist = lm_16;
+            hip = lm_24;
+            knee = lm_26;
+            ankle = lm_28;
+        }
+
+        // console.log("Shouder: ", shoulder);
+        // console.log("Elbow: ", elbow);
+        // console.log("Wrist: ", wrist);
+        // console.log("Hip: ", hip);
+        // console.log("Knee: ", knee);
+        // console.log("Ankle: ", ankle);
+
+        if (shoulder && elbow && wrist && hip && knee && ankle){
+            elbow_angle = calculate_angle(shoulder, elbow, wrist)
+            hip_angle = calculate_angle(shoulder, hip, knee)
+            knee_angle = calculate_angle(hip, knee, ankle)
+
+            const angles =  [elbow_angle, hip_angle, knee_angle];
+
+            const tensorImage = tf.browser.fromPixels(image);
+
+            const landmarks = [shoulder.x, shoulder.y, shoulder.z,
+                               elbow.x, elbow.y, elbow.z,
+                               wrist.x, wrist.y, wrist.z,
+                               hip.x, hip.y, hip.z,
+                               knee.x, knee.y, knee.z,
+                               ankle.x, ankle.y, ankle.z];
+
+            console.log("Angles: ", angles);
+            console.log("Check: ", check_pushup(tensorImage, landmarks, angles));
+        }
+
+        
+
+        // console.log("EMA: ",specificLandmarks[0]);
 
         // Vẽ landmarks đã làm mượt
         specificLandmarks.forEach((landmark, index) => {
