--- a/frontend/check_exercise.html
+++ b/frontend/check_exercise.html
@@ -78,7 +78,7 @@
         </form>
 
         <video id="video_check" autoplay loop muted>
-          <source src="video/BicepsCurl.mp4" type="video/mp4" id="source">
+          <source src = "" type="video/mp4" id="source">
         </video>
       </div>
     </div>
