--- a/frontend/check_exercise.html
+++ b/frontend/check_exercise.html
@@ -17,10 +17,12 @@
 
   <div class="exercise-box" id="exercise-box">
     <h3 id="exercise-name"></h3>
-    <span id="dumbbell">Dumbbell weight: <span id="db_weights"></span>(kg)</span>
-    <span>Sets: <span id="sets"></span></span>
-    <span>Reps: <span id="reps"></span></span>
-    <span>Rest Time: <span id="rest"></span>s</span>
+    <div class="details">
+      <span id="dumbbell">Dumbbell weight: <span id="db_weights"></span>(kg),</span>
+      <span>Sets: <span id="sets"></span>,</span>
+      <span>Reps: <span id="reps"></span>,</span>
+      <span>Rest Time: <span id="rest"></span>s</span>
+    </div>
   </div> 
    
   <div id="notification-container"></div>
