edit age to selectbox

--- a/frontend/check_exercise.html
+++ b/frontend/check_exercise.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Exercises</title>
   <link rel="stylesheet" href="/frontend/css/style_exercise.css">
+  <script src="/frontend/js/Predict_pushup.js"></script>
 </head>
 
 <body>
