--- a/frontend/login_register.html
+++ b/frontend/login_register.html
@@ -21,6 +21,7 @@
     <header class="header" id="header">
         <div class="logo">H&P<span>AI</span></div>
     </header>
+    <div id="notification-container"></div>
 
     <div class="main-container">
         <div class="form_container" style="display: block; margin-bottom: 0px;">
@@ -29,7 +30,7 @@
                 <input type="text" id="name" placeholder="Your name">
 
                 <label for="age">Age: </label>
-                <input type="text" id="age" placeholder="Predicted age" disabled>
+                <select name="ageSelect" id="ageSelect"></select>
 
                 <label for="gender">Gender:</label>
                 <input type="text" id="gender" placeholder="Predicted gender" disabled>
