edit style selectbox

--- a/frontend/login_register.html
+++ b/frontend/login_register.html
@@ -29,8 +29,10 @@
                 <label for="name">Name: </label>
                 <input type="text" id="name" placeholder="Your name">
 
-                <label for="age">Age: </label>
-                <select name="ageSelect" id="ageSelect"></select>
+                <div style="width: 190px">
+                    <label for="age">Age: </label>
+                    <select name="ageSelect" id="ageSelect"></select>
+                </div>
 
                 <label for="gender">Gender:</label>
                 <input type="text" id="gender" placeholder="Predicted gender" disabled>
