--- a/frontend/test.html
+++ b/frontend/test.html
@@ -25,6 +25,10 @@
     </style>
 </head>
 <body>
+    <select style="width: 200px;">
+        <option>10-20</option>
+        <option>20-30</option>
+    </select>
     <h1>Push-Up Posture Prediction</h1>
     <video id="video" autoplay playsinline width="640" height="480"></video>
     <canvas id="canvas" width="640" height="480"></canvas>
