add global map for home page

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -29,6 +29,57 @@
         <p>5-star review from Heathmizer on the App Store</p>
     </section>
 
+    <section class="testimonial_1">
+        <div class="section-intro">
+            <h2>Powered by 6M Workouts</h2>
+        </div>
+        <div class="global-map">
+            <div class="testimonials-v1">
+                <div class="review_v1 _1">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dd7edb3e983_avatar-04.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _2">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d9baeb3e985_avatar-05.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _3">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dfdcdb3e990_avatar-11.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _4">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d7af0b3e98e_avatar-09.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _5">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dcc6cb3e986_avatar-01.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _6">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d0599b3e991_avatar-12.jpg" alt class="review-v1-avatar">
+                </div>
+                <div class="review_v1 _7">
+                    <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d0599b3e991_avatar-12.jpg" alt class="review-v1-avatar">
+                </div>
+            </div>
+        </div>
+        <div class="achievements">
+            <div class="achievement">
+                <div class="achievement-number-2">40,000+</div>
+                <div>
+                    <strong class="map-data-label">WEIGHT LIFTERS</strong>
+                </div>
+            </div>
+            <div class="achievement">
+                <div class="achievement-number-2">3,000,000+</div>
+                <div>
+                    <strong class="map-data-label">WORKOUTS LOGGED</strong>
+                </div>
+            </div>
+            <div class="achievement">
+                <div class="achievement-number-2">10,00,000+</div>
+                <div>
+                    <strong class="map-data-label">SETS LOGGED</strong>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">H&P<span>AI</span></div>
