--- a/frontend/home.html
+++ b/frontend/home.html
@@ -35,25 +35,25 @@
         </div>
         <div class="global-map">
             <div class="testimonials-v1">
-                <div class="review_v1 _1">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _1">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dd7edb3e983_avatar-04.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _2">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _2">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d9baeb3e985_avatar-05.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _3">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _3">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dfdcdb3e990_avatar-11.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _4">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _4">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d7af0b3e98e_avatar-09.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _5">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _5">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599dcc6cb3e986_avatar-01.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _6">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _6">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d0599b3e991_avatar-12.jpg" alt class="review-v1-avatar">
                 </div>
-                <div class="review_v1 _7">
+                <div style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="review_v1 _7">
                     <img src="https://cdn.prod.website-files.com/5c34b1d990599d63c8b3e892/5c34b1d990599d0599b3e991_avatar-12.jpg" alt class="review-v1-avatar">
                 </div>
             </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="achievement">
-                <div class="achievement-number-2">10,00,000+</div>
+                <div class="achievement-number-2">10,000,000+</div>
                 <div>
                     <strong class="map-data-label">SETS LOGGED</strong>
                 </div>
